--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
 
         <nav class="navigation">
             <ul>
-                <li><a href="Viñedos Azteca.html"> Inicio</a></li>
+                <li><a href="index.html"> Inicio</a></li>
                 <li> <a href="#"> Sobre Nosotros 
                     <ul>
-                        <li><a href="../Vinos 2/html/Historia.html"> Historia</li></a></li>
-                        <li> <a href="../Vinos 2/html/Hacienda.html"> Hacienda </a></li>
-                        <li> <a href="../Vinos 2/html/Viñedos.html"> Viñedos </a></li>
+                        <li><a href="html/Historia.html"> Historia</li></a></li>
+                        <li> <a href="html/Hacienda.html"> Hacienda </a></li>
+                        <li> <a href="html/Viñedos.html"> Viñedos </a></li>
                     </ul>
                 </a></li>
                 <li> <a href="#"> Enoturismo 
                     <ul>
-                        <li> <a href="../Vinos 2/html/Recorr&Degu.html"> Recorridos & Degustaciones </a></li>
-                        <li> <a href="../Vinos 2/html/Talleres.html"> Talleres </a></li>
-                        <li> <a href="../Vinos 2/html/Restaurante.html"> Restaurante </a></li>
+                        <li> <a href="html/Recorr&Degu.html"> Recorridos & Degustaciones </a></li>
+                        <li> <a href="html/Talleres.html"> Talleres </a></li>
+                        <li> <a href="html/Restaurante.html"> Restaurante </a></li>
                     </ul>
                 </a></li>
-                <li> <a href="../Vinos 2/html/Contacto.html"> Contacto </a></li>
+                <li> <a href="html/Contacto.html"> Contacto </a></li>
                 <li> <a href="#"> Nuestros Vinos 
                     <ul>
-                        <li> <a href="../Vinos 2/html/Tienda.html"> Tienda</a></li>
+                        <li> <a href="html/Tienda.html"> Tienda</a></li>
                     </ul>
                 </a></li>    
               
