--- a/html/Hacienda.html
+++ b/html/Hacienda.html
@@ -60,12 +60,12 @@
     </div>
     <div class="footer">
         <center>
-        <a href="https://www.facebook.com/vinedosazteca/"><img src="../img/facebook1.png"></a>
-        <a href="https://www.instagram.com/vinedosazteca/"><img src="../img/instagram2.png"></a>
-        <a href="https://web.whatsapp.com/"><img src="../img/whatsapp1.png"></a>
+        <a href="https://www.facebook.com/vinedosazteca/" target="_blank"><img src="../img/facebook1.png"></a>
+        <a href="https://www.instagram.com/vinedosazteca/" target="_blank"><img src="../img/instagram2.png"></a>
+        <a href="https://web.whatsapp.com/" target="_blank"><img src="../img/whatsapp1.png"></a>
         <a href=""><img src="../img/correo.png"></a>
         <a href=""><img src="../img/telefono.png"></a>
-        <a href="https://www.google.com.mx/maps/place/Vi%C3%B1edos+Azteca/@20.6978688,-99.8631033,14z/data=!4m6!3m5!1s0x85d38239711e6869:0xff45c1efaec6766!8m2!3d20.6945358!4d-99.8705864!16s%2Fg%2F1vfp3_0v?entry=ttu"><img src="../img/ubicacion.png"></a>
+        <a href="https://www.google.com.mx/maps/place/Vi%C3%B1edos+Azteca/@20.6978688,-99.8631033,14z/data=!4m6!3m5!1s0x85d38239711e6869:0xff45c1efaec6766!8m2!3d20.6945358!4d-99.8705864!16s%2Fg%2F1vfp3_0v?entry=ttu" target="_blank"><img src="../img/ubicacion.png"></a>
     
     <p>Camino a Viñedos Azteca No. 12 Antes Camino Antiguo a Cadereyta Km 40 + 0.4 <br>
         Carretera San Juan del Río-Cadereyta Ezequiel Montes, Querétaro CP.-76686 <br>
