--- a/html/catalogoAPERTURA.html
+++ b/html/catalogoAPERTURA.html
@@ -78,7 +78,7 @@
        
 <div class="botones">
    
-    <button class="btn1" onclick="alerta ()">COMPRA AQUÍ</button>
+    <a href="https://vinedosazteca.com/shop" class="btn1" onclick="alerta()" target="_blank">COMPRA AQUÍ</a>
 </div>
        
        <br>
