--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <nav class="navigation">
             <ul>
-                <li><a href="Viñedos Azteca.html"> Inicio</a></li>
+                <li><a href="index.html"> Inicio</a></li>
                 <li> <a href="#"> Sobre Nosotros 
                     <ul>
                         <li><a href="html/Historia.html"> Historia</a></li>
